--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.24.2"
   },
