--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "react-qr-code": "^2.0.15",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "superjson": "^2.2.1",
