--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@trpc/next": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "highlight.js": "^11.11.1",
     "html-to-image": "^1.11.13",
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-qr-code": "^2.0.15",
+    "rehype-highlight": "^7.0.2",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "superjson": "^2.2.1",
